# fcitx5-webview

./: .eslintrc.cjs  .gitignore  .gitmodules  CMakeLists.txt  README.md  eslint.config.mjs  index.html  install-deps.sh  package.json  playwright.config.ts  pnpm-workspace.yaml  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
docs/: API.md
include/: candidate_window.hpp  curl.hpp  html_template.hpp.in  utility.hpp  webview.h  webview_candidate_window.hpp
page/: api.ts  common.scss  constant.ts  customize.ts  distribution.ts  format-label.ts  generic.scss  ghost-stripe.ts  global.d.ts  index.html  index.ts  log.ts  macos-15.scss  macos-26.scss  macos.scss  panel.ts  plugin.ts  scroll.ts  selector.ts  style.scss  theme.ts  user.scss  ux.ts
patches/: webview.patch
preview/: CMakeLists.txt  preview.cpp  preview.mm
src/: CMakeLists.txt  curl.cpp  linux.cpp  macos.mm  platform.cpp  utility.cpp  webview_candidate_window.cpp  webview_candidate_window.mm
src/platform/: js.cpp  linux.cpp  macos.mm
tests/: global.d.ts  test-corner-case.spec.ts  test-generic.spec.ts  test-ghost-stripe.spec.ts  test-header.spec.ts  test-irregular-shape.spec.ts  test-scroll.spec.ts  test-theme.spec.ts  util.ts
tests/customize/: test-advanced.spec.ts  test-background.spec.ts  test-color.spec.ts  test-font.spec.ts  test-highlight.spec.ts  test-margin.spec.ts  test-radius.spec.ts  test-scroll.spec.ts  test-size.spec.ts  test-typography.spec.ts
tests/unit/: format-label.test.ts
